--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -3,3 +3,10 @@
   grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px;
   grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px;
 } */
+
+.board {
+	display: inline-block;
+}
+.row {
+	display: flex;
+}
