--- a/src/components/chess/chess.css
+++ b/src/components/chess/chess.css
@@ -1,4 +1,6 @@
 .chess {
 	display: grid;
-	grid-template-columns: 1fr 800px 1fr
+	grid-template-columns: 1fr 800px 1fr;
+	height: 100%;
+	position: relative;
 }
