--- a/src/components/chess/piece/piece.css
+++ b/src/components/chess/piece/piece.css
@@ -1,8 +1,9 @@
 .piece {
-  font-size: 70px;
-  cursor: pointer;
+	font-size: 70px;
+	cursor: pointer;
 	-webkit-user-select: none;  /* Chrome all / Safari all */
-  -moz-user-select: none;     /* Firefox all */
-  -ms-user-select: none;      /* IE 10+ */
-  user-select: none;          /* Likely future */   
+	-moz-user-select: none;     /* Firefox all */
+	-ms-user-select: none;      /* IE 10+ */
+	user-select: none;          /* Likely future */
+	color: initial !important;
 }
