--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,11 @@
 
 body {
 	height: 100vh;
+	width: 100vw;
 	margin: 0;
 	color: white;
 	font-family: 'Poppins', sans-serif;
+	overflow: hidden;
 }
 
 #root {
