--- a/src/components/chess/chess.scss
+++ b/src/components/chess/chess.scss
@@ -1,10 +1,6 @@
+@use './board/square/square.scss' as square;
+
 .chess {
-	display: grid;
-	grid-template-columns: 800px 1fr;
-
-	#player-panels {
-		display: grid;
-		grid-template-rows: 1fr 1fr;
-	}
+	display: flex;
+	align-self: center;
 }
-
