--- a/src/components/chess/player-panel/player-panel.scss
+++ b/src/components/chess/player-panel/player-panel.scss
@@ -1,10 +1,23 @@
+@use '../board/square/square.scss' as square;
+
 .player-panel {
-	.dead-pieces {
+	height: square.$height * 4;
+ 
+	.captured-pieces {
 		display: flex;
 		flex-wrap: wrap;
 	}
 
 	.piece {
 		font-size: 55px;
+	}
+
+	.header {
+		display: flex;
+		align-items: center;
+
+		:first-child {
+			margin-right: 1em;
+		}
 	}
 }
