--- a/src/components/searching-match/searching-match.scss
+++ b/src/components/searching-match/searching-match.scss
@@ -1,7 +1,11 @@
 .searching-match {
 	display: flex;
-	align-self: center;
 	justify-content: center;
-	height: 100vh;
 	align-items: center;
+	width: 100%;
+	height: 100%;
+
+	div {
+		margin-left: 1em;
+	}
 }
