--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,400&display=swap');
 
 body {
+	margin: 0;
+}
+
+#root {
 	height: 100vh;
 	width: 100vw;
 	margin: 0;
 	color: white;
 	font-family: 'Poppins', sans-serif;
-	overflow: hidden;
-}
-
-#root {
 	background-color: rgb(132, 80, 28);
-	height: 100%;
+	display: flex;
 }
 
 .ReactModal__Content {
