added css modules to the project

--- a/src/components/app/chess/piece/piece.module.scss
+++ b/src/components/app/chess/piece/piece.module.scss
@@ -1,4 +1,4 @@
-@use '..//board/square/square.scss' as square;
+@use '../board/square/square.module.scss' as square;
 
 .piece {
 	font-size: calc(square.$height - 4vh);
