--- a/src/index.scss
+++ b/src/index.scss
@@ -2,16 +2,14 @@
 
 body {
 	margin: 0;
+	font-family: 'Poppins', sans-serif;
 }
 
 #root {
 	height: 100vh;
-	width: 100vw;
-	margin: 0;
 	color: white;
-	font-family: 'Poppins', sans-serif;
 	background-color: rgb(132, 80, 28);
-	display: flex;
+	overflow: hidden;
 }
 
 .ReactModal__Content {
