Renamed "Give Up" button to "Leave Match" and added functionality to it. Moved some components to other folders.

--- a/src/components/shared/piece/piece.module.scss
+++ b/src/components/shared/piece/piece.module.scss
@@ -1,4 +1,4 @@
-@use '../board/square/square.module.scss' as square;
+@use '../../app/chess/board/square/square.module.scss' as square;
 
 .piece {
 	font-size: calc(square.$height - 4vh);
